--- a/css/main.css
+++ b/css/main.css
@@ -770,6 +770,151 @@ body {
     height: 50px;
     background-color: blue;
 }
+/*end newsletter*/
+
+/*End info item*/
+
+
+
+/*Footer*/
+.main-footer {
+    margin-top: 72px;
+}
+
+.footer-first-layer{
+    width: 100%;
+    height: 255px;
+    background-color: #222222;
+    padding-top: 60px; 
+}
+
+.footer-categories-list {
+    display: flex;
+    justify-content: space-between;
+    width: 990px;
+    list-style: none;
+    margin: auto;
+    padding: 0;
+}
+
+.footer-categories-list li{
+    position: relative;
+    width: 230px;
+}
+
+.footer-head-text {
+    display: block;
+    font-size: 18px;
+    color: #444444;
+    line-height: 17px;
+    margin-bottom: 25px;
+}
+
+.footer-head-text::after{
+    content: "";
+    position: absolute;
+    top: 25px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #777777;
+}
+
+.footer-address,
+.footer-phone,
+.footer-email {
+    position: relative;
+    margin: 0;
+    margin-left: 20px;
+    padding: 0;
+    font-size: 12px;
+    line-height: 24px;
+    color: #777777;
+}
+
+.footer-address::before,
+.footer-phone::before,
+.footer-email::before{
+    content: "";
+    position: absolute;
+    left: -20px;
+    top: 3px;
+    width: 15px;
+    height: 15px;
+}
+.footer-address::before{
+    background-color: #2e8f9f;
+}
+
+.footer-phone::before{
+    background-color: #2e8f9f;
+}
+
+.footer-email::before{
+    background-color: #2e8f9f;
+}
+
+
+.footer-information-list{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 12px;
+    line-height: 24px;
+}
+
+.footer-information-list a{
+    text-decoration: none;
+    color: #777777;
+}
+/*КОнец первого уровня футер*/
+
+
+/*ВТорой уровень футера*/
+.footer-second-layer {
+    width: 100%;
+    background-color: #f9fbfc;
+}
+
+.footer-second-layer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 990px;
+    margin: auto;
+    font-size: 11px;
+    line-height: 24px;
+    color: #999999;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.footer-social-media-list{
+    display: flex;
+    flex-direction: flex-end;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.footer-social-media-list a{
+    width: 25px;
+    height: 25px;
+    margin-left: 5px; 
+    border-radius: 50%;
+    background-color: #444444;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
